--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- Responsive Style -->
     <link rel="stylesheet" href="assets/css/responsive.css">
 
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
+
   </head>
   <body>
 
@@ -115,7 +117,7 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
               <div class="icon">
-                <i class="lni-cog"></i>
+                <i class="lni lni-network"></i>
               </div>
               <div class="services-content">
                 <h3><a href="#">Network</a></h3>
@@ -127,7 +129,7 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
               <div class="icon">
-                <i class="lni-stats-up"></i>
+                <i class="lni lni-briefcase"></i>
               </div>
               <div class="services-content">
                 <h3><a href="#">Job Seekers</a></h3>
@@ -163,7 +165,7 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
               <div class="icon">
-                <i class="lni-mobile"></i>
+                <i class="lni lni-invest-monitor"></i>
               </div>
               <div class="services-content">
                 <h3><a href="#">Import Export</a></h3>
@@ -300,7 +302,7 @@
     <section id="team" class="section-padding bg-gray">
       <div class="container">
         <div class="section-header text-center">          
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Meet our team</h2>
+          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Meet Our Team</h2>
           <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
         <div class="row">
@@ -586,7 +588,7 @@
     <section id="contact" class="section-padding bg-gray">    
       <div class="container">
         <div class="section-header text-center">          
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Countact Us</h2>
+          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
           <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
         <div class="row contact-form-area wow fadeInUp" data-wow-delay="0.3s">   
@@ -646,7 +648,7 @@
               <div class="widget">
                 <h3 class="footer-logo"><img src="assets/img/logo.png" alt=""></h3>
                 <div class="textwidget">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lobortis tincidunt est, et euismod purus suscipit quis.</p>
+                  <p>Reap and Grow with Business Unify to promote your Business faster than ever before</p>
                 </div>
                 <div class="social-icon">
                   <a class="facebook" href="#"><i class="lni-facebook-filled"></i></a>
