--- a/home.html
+++ b/home.html
@@ -152,13 +152,14 @@
                         <button class="btn mt-3" style="border-radius: 20px; background: cornflowerblue; width: 150px; ">SIGN UP</button>
                     </div>
                 </div>
-                <!-- <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div> -->
+                <div class="carousel-item">
+                    <img src="./assets/img/cover-2.jpg" class="cover" alt="...">
+                    <div class="carousel-caption" style="display: grid; place-items: start;">
+                        <h2 class="text-white text-left">Connecting Business Resources<br> Across the Globe,<br> at ONE Platform.</h2>
+                        <p class="text-left text-gray">Connect with Cofounders, Investors,Professional Employees, Manufacturer and Many more.</p>
+                        <button class="btn mt-3" style="border-radius: 20px; background: cornflowerblue; width: 150px; ">SIGN UP</button>
+                    </div>
+                </div>  
             </div>
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
