--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#hero-area">
+                            <a class="nav-link" href="#home">
                                 Home
                             </a>
                         </li>
@@ -116,7 +116,7 @@
         <!-- Navbar End -->
 
         <!-- Hero Area Start -->
-        <div id="hero-area" class="hero-area-bg d-none">
+        <!-- <div id="hero-area" class="hero-area-bg d-none">
             <div class="container">
                 <div class="row">
 
@@ -140,15 +140,15 @@
 
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Hero Area End -->
 
         <!-- slider area -->
-        <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
+        <div id="home" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                <li data-target="#home" data-slide-to="0" class="active"></li>
+                <li data-target="#home" data-slide-to="1"></li>
+                <li data-target="#home" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -207,11 +207,11 @@
                     </div>
                 </div>  
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#home" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#home" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
