more content why join

--- a/community.html
+++ b/community.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Header Area wrapper Starts -->
-    <header id="header-wrap">
+    <header id="header-wrap" class="mb-5">
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
             <div class="container">
@@ -38,6 +38,10 @@
 
     </header>
     <!-- Header Area wrapper End -->
+
+    <div class="container p-5">
+        <h2 class="display-2">Community</h2>
+    </div>
 </body>
 
 </html>
