--- a/home.html
+++ b/home.html
@@ -317,26 +317,27 @@
     <div class="about-area section-padding bg-gray" id="join">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-12 col-xs-12 info">
+                <div class="col-lg-8 col-md-12 col-xs-12 info">
                     <div class="about-wrapper wow fadeInLeft" data-wow-delay="0.3s">
                         <div>
                             <div class="site-heading">
                                 <p class="mb-3">Business Unify</p>
                                 <h2 class="section-title">Why Join Us ?</h2>
                             </div>
-                            <div class="content">
-                                <p>
-                                    We are an innovative business network building platform, which helps to connect
-                                    people with other like-minded people through personal ID & Business ID which is
-                                    created once you get registered. <strong>Reap and Grow with Business Unify to
-                                        promote your Business faster than ever before</strong>
-                                </p>
-                                <a href="/about-us" class="btn btn-common mt-3">Read More</a>
+                            <div id="why-join">
+                                <ul class="wj-ul">
+                                    <li><strong>Vast reach:</strong> we bring people from various sectors all together under one roof. Which gives you a vast networking option.</li>
+                                    <li><strong>Access to data:</strong>  get listed your business and connect to the networks for free </li>
+                                    <li><strong>Get genuine data:</strong> unlike other websites, we take businesses and their authorized person's information to create a genuine profile of the individual, which shows in their profile altogether.</li>
+                                    <li><strong>Direct connection:</strong> there is no such third-party involvement in the form of an agent or as a company by which you get directly connected to its owner or manager who is the authorized person.  </li>
+                                    <li><strong>Bifurcated data:</strong> peoples get register themselves in a particular section of their business, which will show you in that particular section only. It's not a merged data altogether, because of which is easy to use. </li>
+                                    <li><strong>Two-way networking:</strong> on this platform, you are not only restricted to serve your customers but also you can take services for your business from other members.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-12 col-xs-12 wow fadeInRight d-flex align-items-center" data-wow-delay="0.3s">
                     <img class="img-fluid" src="/assets/img/join.jpg" alt="">
                 </div>
             </div>
